--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,9 +10,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: 
-      context: ../api_yamdb
-      dockerfile: Dockerfile
+    image: AlGenSo/yamdb_final: latest
     restart: always
     volumes:
       - static_value:/app/static/
