--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: alexandryp/infra_action:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
 
   # Автоматический деплой проекта на боевой сервер
   deploy:
