--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -66,7 +66,8 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: alexandryp/yamdb_final:latest
+          tags: AlGenSo/yamdb_final: latest
+          file: api_yamdb/Dockerfile
 
   # Автоматический деплой проекта на боевой сервер
   deploy:
