--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-slim
 
 WORKDIR /app
-COPY ./api_yamdb requirements.txt .
+COPY ./api_yamdb/requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . .
