--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -92,7 +92,7 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker pull ${{ secrets.USER }}/yamdb_final:latest
+          # sudo docker pull ${{ secrets.USER }}/yamdb_final:latest
           sudo docker-compose up -d
 
   # Отправка сообщения в Telegramm
