--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: ${{ secrets.USER }}/yamdb_final:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
           file: api_yamdb/Dockerfile
 
   # Автоматический деплой проекта на боевой сервер
@@ -92,7 +92,7 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+          sudo docker pull ${{ secrets.USER }}/yamdb_final:latest
           sudo docker-compose up -d
 
   # Отправка сообщения в Telegramm
