--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: algenso/api_yamdb:latest
+    image: algenso/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/app/static/
