--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,4 +6,4 @@ RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . .
 
-CMD ["gunicorn", "--capture-output", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
+CMD ["gunicorn", "--capture-output", "api_yamdb.api_yamdb.wsgi:application", "--bind", "0:8000" ]
