--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7-slim
 
+RUN mkdir /app
 WORKDIR /app
-COPY ./api_yamdb/requirements.txt .
+COPY api_yamdb/ /app
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt --no-cache-dir
-COPY . .
 
-CMD ["gunicorn", "--capture-output", "api_yamdb.api_yamdb.wsgi:application", "--bind", "0:8000" ]
+CMD ["gunicorn", "--capture-output", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
