--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.7-slim
 
 RUN mkdir /app
 WORKDIR /app
-COPY . .
+COPY api_yamdb/ .
 RUN pip install --upgrade pip
-RUN pip install -r ./api_yamdb/requirements.txt --no-cache-dir
+RUN pip install -r requirements.txt --no-cache-dir
 
-CMD ["gunicorn", "--capture-output", "./api_yamdb/api_yamdb.wsgi:application", "--bind", "0:8000" ]
+CMD ["gunicorn", "--capture-output", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
