--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
-          file: api_yamdb/Dockerfile
+          file: ./api_yamdb/Dockerfile
 
   # Автоматический деплой проекта на боевой сервер
   deploy:
@@ -77,7 +77,6 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
           sudo docker-compose stop
@@ -89,7 +88,7 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker pull ${{ secrets.USER }}/yamdb_final:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
           sudo docker-compose up -d
 
   # Отправка сообщения в Telegramm
