--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -30,11 +30,8 @@ jobs:
         # запустить написанные разработчиком тесты
         python manage.py test
 
-rules:
-  - if: '$CI_PIPELINE_SOURCE == "push"'
-  when: always
-
   build_and_push_to_docker_hub:
+    if: github.ref == 'refs/heads/master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
