--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -5,21 +5,13 @@ on: [push]
 jobs:
 
   tests:
-    # «Раннер» — создание изолированного окружения с последней версией Ubuntu 
     runs-on: ubuntu-latest
-
     steps:
-    # Запуск actions checkout — готового скрипта 
-    # для клонирования репозитория
     - uses: actions/checkout@v2
     - name: Set up Python
-      # Запуск actions setup-python — готового скрипта 
-      # для развёртывания окружения Python
       uses: actions/setup-python@v2
       with:
-        # Выбор версии Python
         python-version: 3.7
-
     - name: Install dependencies
       run: | 
         # обновление pip
@@ -28,8 +20,6 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
-
-    # Проверка кода на соответствие стандарту PEP8
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
@@ -38,37 +28,30 @@ jobs:
         # Переход в папку с файлом manage.py
         cd api_yamdb/
         # запустить написанные разработчиком тесты
-        python manage.py pytest
+        python manage.py test
 
-
-  # Сборка и доставка докер-образа для контейнера web на Docker Hub
   build_and_push_to_docker_hub:
+    if: github.ref == 'refs/heads/master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
         uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
-        # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
-          file: api_yamdb/Dockerfile
+          file: ./api_yamdb/Dockerfile
 
-
-  # Автоматический деплой проекта на боевой сервер
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -79,22 +62,21 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
           sudo docker-compose stop
           sudo docker-compose rm web
           touch .env
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
           echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker pull ${{ secrets.USER }}/yamdb_final:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
           sudo docker-compose up -d
 
-  # Отправка сообщения в Telegramm
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -105,5 +87,3 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: ${{ github.workflow }} успешно выполнен!
-
-  
