--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/docs/:/usr/share/nginx/html/api/docs/
+      - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
