--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     image: alexandryp/yamdb_final:latest
     restart: always
     volumes:
-      - static_value:/app/static/
+      # - static_value:/app/static/
       - media_value:/app/media/
  
     depends_on:
