--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/docs/:/usr/share/nginx/html/api/docs/
       - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/var/html/static/
+      # - static_value:/var/html/static/
       - media_value:/var/html/media/
 
     depends_on:
