--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     image: alexandryp/yamdb_final:latest
     restart: always
     volumes:
-      # - static_value:/app/static/
+      - static_value:/app/static/
       - media_value:/app/media/
  
     depends_on:
@@ -27,10 +27,10 @@ services:
       - "80:80"
 
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/docs/:/usr/share/nginx/html/api/docs/
-      - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      # - static_value:/var/html/static/
+      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      # - ./nginx/docs/:/usr/share/nginx/html/api/docs/
+      # - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/var/html/static/
       - media_value:/var/html/media/
 
     depends_on:
