--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       - "80:80"
 
     volumes:
-      # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       # - ./nginx/docs/:/usr/share/nginx/html/api/docs/
       # - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
       - static_value:/var/html/static/
