--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
       # - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+      - .static/redoc.yaml:/var/html/redoc/redoc.yaml
+      - ./templates/redoc.html:/var/html/redoc/redoc.html
 
     depends_on:
       - web
