--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
       # - ./nginx/docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - .api_yamdb/static/redoc.yaml:/var/html/redoc/redoc.yaml
+      - .static/redoc.yaml:/var/html/redoc/redoc.yaml
       - ./templates/redoc.html:/var/html/redoc/redoc.html
 
     depends_on:
