--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -7,7 +7,9 @@ server {
     server_name 127.0.0.1;
 
     location /static/ {
-        root /var/html/;
+        # root /var/html/;
+        root /home/www/__your_aplication__;
+        try_files $uri =404;
     }
 
     location /media/ {
