--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -8,7 +8,7 @@ server {
 
     location /static/ {
         # root /var/html/;
-        root /home/www/__your_aplication__;
+        root /home/www/__api_yamdb__;
         try_files $uri =404;
     }
 
