--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -7,9 +7,7 @@ server {
     server_name 127.0.0.1;
 
     location /static/ {
-        # root /var/html/;
-        root /home/www/__api_yamdb__;
-        try_files $uri =404;
+        root /var/html/;
     }
 
     location /media/ {
