--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -28,7 +28,7 @@ jobs:
         # Переход в папку с файлом manage.py
         cd api_yamdb/
         # запустить написанные разработчиком тесты
-        python manage.py test
+        python manage.py pytest
 
   build_and_push_to_docker_hub:
     if: github.ref == 'refs/heads/master'
